Fix open_basedir leak
Fixes oss-fuzz #60741
Closes GH-11780

--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,9 @@ PHP                                                                        NEWS
 - DOM:
   . Fix DOMEntity field getter bugs. (nielsdos)
 
+- Core:
+  . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
+
 - FFI:
   . Fix leaking definitions when using FFI::cdef()->new(...). (ilutov)
 
