Fix GH-11791: Wrong default value of DOMDocument::xmlStandalone
At one point this was changed from a bool to an int in libxml2, with
negative values meaning it is unspecified. Because it is cast to a bool
this therefore returned true instead of the expected false.

Closes GH-11793.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ PHP                                                                        NEWS
     (nielsdos)
   . Fix DOMCharacterData::replaceWith() with itself. (nielsdos)
   . Fix empty argument cases for DOMParentNode methods. (nielsdos)
+  . Fixed bug GH-11791 (Wrong default value of DOMDocument::xmlStandalone).
+    (nielsdos)
 
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
