--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ PHP                                                                        NEWS
   . Fix empty argument cases for DOMParentNode methods. (nielsdos)
   . Fixed bug GH-11791 (Wrong default value of DOMDocument::xmlStandalone).
     (nielsdos)
+  . Fix json_encode result on DOMDocument. (nielsdos)
 
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
