--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,10 @@ PHP                                                                        NEWS
 
 03 Aug 2023, PHP 8.3.0beta2
 
+- Date:
+  . Fixed bug GH-11854 (DateTime:createFromFormat stopped parsing datetime with
+    extra space). (nielsdos, Derick)
+
 - DOM:
   . Fix DOMEntity field getter bugs. (nielsdos)
   . Fix incorrect attribute existence check in DOMElement::setAttributeNodeNS.
