--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-11854 (DateTime:createFromFormat stopped parsing datetime with
     extra space). (nielsdos, Derick)
 
+- Core:
+  . Fixed strerror_r detection at configuration time. (Kévin Dunglas)
+
 - DOM:
   . Fix DOMEntity field getter bugs. (nielsdos)
   . Fix incorrect attribute existence check in DOMElement::setAttributeNodeNS.
