--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ PHP                                                                        NEWS
     (nielsdos)
   . Fix json_encode result on DOMDocument. (nielsdos)
   . Fix manually calling __construct() on DOM classes. (nielsdos)
+  . Fixed bug GH-11830 (ParentNode methods should perform their checks
+    upfront). (nielsdos)
 
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
