--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ PHP                                                                        NEWS
   . Fix manually calling __construct() on DOM classes. (nielsdos)
   . Fixed bug GH-11830 (ParentNode methods should perform their checks
     upfront). (nielsdos)
+  . Fix viable next sibling search for replaceWith. (nielsdos)
 
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
