--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ PHP                                                                        NEWS
   . Fixed bug GH-11791 (Wrong default value of DOMDocument::xmlStandalone).
     (nielsdos)
   . Fix json_encode result on DOMDocument. (nielsdos)
+  . Fix manually calling __construct() on DOM classes. (nielsdos)
 
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
