--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-11854 (DateTime:createFromFormat stopped parsing datetime with
     extra space). (nielsdos, Derick)
 
+- Date:
+  . Fixed bug GH-11416 (Crash with DatePeriod when uninitialised objects are
+    passed in). (Derick)
+
 - Core:
   . Fixed strerror_r detection at configuration time. (Kévin Dunglas)
 
