--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.3.0beta3
+?? ??? ????, PHP 8.3.0RC1
+
+
+17 Aug 2023, PHP 8.3.0beta3
 
 - DOM:
   . adoptNode now respects the strict error checking property. (nielsdos)
