--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,9 @@ PHP                                                                        NEWS
 - Standard:
   . Added $before_needle argument to strrchr(). (HypeMC)
 
+- Standard:
+  . Added 4 new rounding modes to the round(). (Jorg Sowa)
+
 17 Aug 2023, PHP 8.3.0beta3
 
 - Core:
